@@ -1691,6 +1691,8 @@ event.system.shutdown=System shutdown
 event.system.maxAlarmChanged=Maximum alarm level changed
 event.system.userLogin=User login
 event.system.userLoginForUser=Login event for {0}
+event.system.disabledUserCreated=Disabled user created
+event.system.disabledUserCreatedByUser=Disabled user created by {0}
 event.system.failedUserLogin=Failed login
 event.system.versionCheck=Current version check
 event.system.setPoint=Set point event handler failure
@@ -1830,6 +1832,7 @@ event.spinwave.unknownSensor=Data received from an unknown sensor {0}
 event.email.failure=Failed to send email titled "{0}" to "{1}". Message: "{2}"
 event.login=User {0} logged in from remote address {1}
 event.failedLogin=Failed login attempt on user {0} from remote address {1}
+event.disabledUserCreated=User {0} created disabled user {1}
 event.alarmMaxIncreased=Maximum alarm level has increased from {0} to {1}
 event.alarmMaxDecreased=Maximum alarm level has decreased from {0} to {1}
 event.detector.periodState={0} has been {1} for more than {2}
