@@ -17,6 +17,7 @@ import com.serotonin.m2m2.db.dao.SystemSettingsDao;
 import com.serotonin.m2m2.db.dao.UserDao;
 import com.serotonin.m2m2.i18n.ProcessResult;
 import com.serotonin.m2m2.i18n.TranslatableMessage;
+import com.serotonin.m2m2.module.definitions.permissions.RegisterDisabledUserPermission;
 import com.serotonin.m2m2.module.definitions.permissions.UserEditSelfPermission;
 import com.serotonin.m2m2.vo.User;
 import com.serotonin.m2m2.vo.permission.PermissionDetails;
@@ -200,7 +201,13 @@ public class UsersService extends AbstractVOService<User, UserDao> {
 
     @Override
     public boolean hasCreatePermission(PermissionHolder user, User vo) {
-        return user.hasAdminPermission();
+        if(user.hasAdminPermission()) {
+            return true;
+        }else if(vo.isDisabled() && Permissions.hasGrantedPermission(user, RegisterDisabledUserPermission.PERMISSION)) {
+            return true;
+        }else {
+            return false;
+        }
     }
 
     @Override
